welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    var couleur:Boolean = blanc
    do {
    	avance()
    	couleur = getCouleurSol()
    }
   	 	while(couleur == Color.green)  		
    				
   	 	
    		if(estFaceMur){
    	return
    }
        return couleur
}        
